--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   </head>
 
   <body>
+    <% if current_user && current_user.is_admin? %>
+      <%= link_to("Admin", rails_admin_path) %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
