[bootstrap_theme] LU - updated page title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tzuchi</title>
+    <title>Tzu Chi Foundation Bohol</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
